# aas-smt-verification-with-llms

./: CONTRIBUTING.rst  DATASHEET.md  EXPERIMENTS.rst  README.md  README.rst  Readme.md  app.py  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Experiments/: check_property_data_type.py  framework.py  match_idshort_description.py
Prompts/: check_property_data_type.json  match_idshort_description.json
TestData/: reduced_testAAS.json
aas_smt_verification_with_llms/: __init__.py  __main__.py  aasing.py  argparsing.py  common.py  iteration.py  llm.py  main.py
archive/2025-09-17/: Readme.md  app.py  config.yaml  requirements.txt
archive/2025-09-17/Experiments/: check_property_data_type.py  framework.py  match_idshort_description.py
archive/2025-09-17/Prompts/: check_property_data_type.json  match_idshort_description.json
archive/2025-09-17/TestData/: reduced_testAAS.json
continuous_integration/: check_version_consistent.py  precommit.py
dev_scripts/: evaluate_output.py  extract_cases_for_concept_description_to_unit.py  generate_basic_submodel_with_single_property_and_concept_description.py  generate_evaluation_table.py  generate_minimal_examples_concept_description_to_value_type.py  generate_minimal_examples_description_to_display_name.py  list_idta_submodel_templates.py  merge_all_expected_and_unexpected.py  scrape_idta_submodel_templates.py
dev_scripts/evaluate_experiments/: count_correctness.py  list_file_remarks.py  list_output.py
dev_scripts/generate_minimal_examples/: common.py  concept_description_to_description.py  concept_description_to_unit.py  concept_description_to_value_type.py  description_to_display_name.py
experiment_evaluation/gpt-5-2025-08-07/concept_description_to_description/: manual-evaluation-empwilli.csv  manual-evaluation-h-pallewaththe.csv  manual-evaluation-inastmtz.csv  (+2 more)
experiments/: common.py  concept_description_to_description.py  concept_description_to_unit.py  concept_description_to_value_type.py  description_to_display_name.py  description_to_id_short.py  description_to_idshort.py  inline_responses.py  join_responses_in_complex.py  run_main_on_complex.py  storage.py  value_type_to_concept_description.py
idta_submodel_templates/: list.txt
tests/: test_aasing.py  test_iteration.py
(+1509 files in other folders)
